<resources>
    <string name="app_name">TimeSlack</string>
    <string name="action_settings">Settings</string>
    <string name="labelCurrentActivity">current activity</string>
    <string name="textCurrentActivity">some activity</string>
    <string name="labelCurrentActivityRemaining">remaining (minutes)</string>
    <string name="textCurrentActivityRemaining">26</string>
    <string name="labelCurrentActivityFinishTime">finish time</string>
    <string name="textCurrentActivityFinishTime">10:45</string>
    <string name="labelNextActivity">next activity</string>
    <string name="textNextActivity">next activity</string>
    <string name="labelSlackRemaining">slack (minutes)</string>
    <string name="textSlackRemaining">42</string>
    <string name="labelFlowFinishTime">flow finish time</string>
    <string name="textFlowFinishTime">11:05</string>

    <string name="buttonForwardNextActivity">NEXT ACTIVITY</string>
    <string name="buttonForwardStartReturning">START RETURNING</string>
    <string name="buttonForwardFinishFlow">FINISH FLOW</string>
    <string name="buttonForwardClose">CLOSE</string>
</resources>
