<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/labelCurrentActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labelCurrentActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCurrentActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCurrentActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCurrentActivity" />

    <TextView
        android:id="@+id/labelCurrentActivityRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labelCurrentActivityRemaining"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentActivity" />

    <TextView
        android:id="@+id/textCurrentActivityRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCurrentActivityRemaining"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCurrentActivityRemaining" />

    <TextView
        android:id="@+id/labelCurrentActivityFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCurrentActivityFinishTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentActivityRemaining" />

    <TextView
        android:id="@+id/textCurrentActivityFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCurrentActivityFinishTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCurrentActivityFinishTime" />

    <View
        android:id="@+id/divider1"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentActivityFinishTime" />

    <TextView
        android:id="@+id/labelNextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/labelNextActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider1" />

    <TextView
        android:id="@+id/textNextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNextActivity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNextActivity" />

    <View
        android:id="@+id/divider2"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNextActivity" />

    <TextView
        android:id="@+id/labelSlackRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labelSlackRemaining"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/textSlackRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSlackRemaining"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSlackRemaining" />

    <TextView
        android:id="@+id/labelPlanFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelPlanFinishTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSlackRemaining" />

    <TextView
        android:id="@+id/textPlanFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textPlanFinishTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:translationY="-10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPlanFinishTime" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonNextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:tint="@android:color/white"
        android:translationY="-10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textCurrentActivityFinishTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textCurrentActivityFinishTime"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>